--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Zhucun Xue"
-  avatar           : "images/xzc_images.jpg"
+  avatar           : "images/xzc_image.jpg"
   bio              :  # "Ph.D. under Zhejiang University"   fiancee -> wife, 2023.10.02
   location         : "Hangzhou, China"
   employer         : 
